--- a/i18n/messages/en/navbar.json
+++ b/i18n/messages/en/navbar.json
@@ -12,7 +12,10 @@
       "title": "Settings",
       "description": "Manage your account"
     },
-    "logout": "Logout"
+    "logout": "Logout",
+    "version": {
+      "updateAvailable": "v{version} available"
+    }
   },
   "theme": {
     "title": "Theme",
