--- a/i18n/messages/nl/settings.json
+++ b/i18n/messages/nl/settings.json
@@ -222,6 +222,19 @@
     }
   },
   "admin": {
+    "general": {
+      "title": "Algemeen",
+      "allowRegistration": "Nieuwe registraties toestaan",
+      "registrationDescription": "Wanneer uitgeschakeld, kunnen alleen bestaande gebruikers inloggen",
+      "locales": "Ingeschakelde talen",
+      "localesDescription": "Selecteer welke talen gebruikers kunnen kiezen",
+      "defaultLocale": "Standaardtaal",
+      "defaultLocaleDescription": "Taal voor nieuwe gebruikers en als fallback",
+      "saveLocales": "Taalinstellingen opslaan",
+      "localesSaved": "Taalinstellingen opgeslagen",
+      "localesError": "Taalinstellingen opslaan mislukt",
+      "atLeastOneLocale": "Minimaal één taal moet ingeschakeld zijn"
+    },
     "registration": {
       "title": "Registratie",
       "allowRegistration": "Nieuwe registraties toestaan",
@@ -375,12 +388,20 @@
       "provider": "AI Provider",
       "providers": {
         "openai": "OpenAI",
+        "azure": "Azure OpenAI",
+        "anthropic": "Anthropic",
+        "google": "Google AI",
+        "mistral": "Mistral AI",
+        "deepseek": "DeepSeek",
         "perplexity": "Perplexity",
+        "groq": "Groq",
         "ollama": "Ollama (Lokaal)",
         "lmStudio": "LM Studio (Lokaal)",
         "genericOpenai": "Generieke OpenAI-compatibel"
       },
       "endpointUrl": "Endpoint URL",
+      "azureEndpoint": "Azure Resource URL (Optioneel)",
+      "azureEndpointDescription": "Optionele Azure OpenAI endpoint. Laat leeg voor standaard OpenAI endpoint.",
       "model": "Model",
       "visionModel": "Vision Model (Optioneel)",
       "visionModelDescription": "Optioneel: Gebruik een ander model voor afbeelding/vision taken. Laat leeg om het bovenstaande model te gebruiken.",
